# rfq_engine

./: .gitignore  README.md  pyproject.toml  rfq_postman_collection.json
docs/: ARCHITECTURE_AND_ER_DIAGRAMS.md  DEVELOPMENT_PLAN.md  DISCOUNT_PROMOTION_PROMPT.md  DUAL_BACKEND_CONFIG.md  DUAL_BACKEND_DEVELOPMENT_PLAN.md  ER_DIAGRAM.md  HOSPITALITY_BUSINESS_GAP_PLAN.md  HOSPITALITY_BUSINESS_GUIDE.md  HOSPITALITY_QUICK_START.md  INTEGRATION_SCENARIOS_SOP.md  MIGRATION_DYNAMODB_TO_POSTGRESQL.md  PHASE0_ENTITY_INVENTORY.md  POSTGRESQL_SETUP.md  PRD.md  PRICING_CALCULATION.md  TEST_DATA_PREPARATION.md  integration_certification_report.md  integration_certification_report_dynamodb.md
migration/: README.md  alembic.ini
migration/alembic/: env.py
migration/alembic/versions/: .gitkeep  0001_create_items.py  0002_create_provider_items.py  0003_create_provider_item_batches.py  0004_create_segments.py  0005_create_segment_contacts.py  0006_create_fx_rates.py  0007_create_cancellation_policies.py  0008_create_bundles.py  0009_create_bundle_components.py  0010_create_item_catalog_refs.py  0011_create_item_price_tiers.py  0012_create_discount_prompts.py  0013_create_requests.py  0014_create_quotes.py  0015_create_quote_items.py  0016_create_installments.py  0017_create_files.py  (+1 more)
rfq_engine/: __init__.py  main.py  schema.py
rfq_engine/handlers/: config.py  telemetry.py
rfq_engine/mutations/: availability.py  bundle.py  bundle_component.py  cancellation_policy.py  discount_prompt.py  file.py  fx_rate.py  installment.py  item.py  item_catalog_ref.py  item_price_tier.py  provider_item.py  provider_item_batches.py  quote.py  quote_item.py  request.py  segment.py  segment_contact.py
rfq_engine/queries/: availability.py  bundle.py  bundle_component.py  cancellation_policy.py  catalog_inquiry.py  discount_prompt.py  file.py  fx_rate.py  installment.py  item.py  item_catalog_ref.py  item_price_tier.py  provider_item.py  provider_item_batches.py  quote.py  quote_item.py  request.py  segment.py  segment_contact.py
rfq_engine/tests/: .env.example  README_TEST_DATA.md  conftest.py  load_sample_data.py  pytest.ini  test_ai_rfq_engine.py  test_availability_contention.py  test_availability_handler.py  test_backend_agnostic_dispatch.py  test_batch_loaders.py  test_bundle_templates.py  test_cache_management.py  test_catalog_handler.py  test_dual_backend_loaders.py  test_gap_closure_development.py  test_hardening_pilot.py  test_helpers.py  test_hospitality_pilot.py  test_inquire_catalog.py  test_nested_resolvers.py  test_postgresql_repositories.py  test_quote_item_g2_occupancy.py  test_quote_item_g5_g6.py  test_repository_adoption_guard.py
rfq_engine/types/: availability.py  bundle.py  bundle_component.py  cancellation_policy.py  catalog_inquiry.py  discount_prompt.py  file.py  fx_rate.py  installment.py  item.py  item_catalog_ref.py  item_price_tier.py  provider_item.py  provider_item_batches.py  quote.py  quote_item.py  request.py  segment.py  segment_contact.py
rfq_engine/utils/: normalization.py
(+139 files in other folders)
